Add ProcessBuilder stop read output before its end for large upload files.Also re-direct the errors to the regular output.